--- a/SampleApplications/Controls/app/Views/MainContainer/MainContainerView.tpl.html
+++ b/SampleApplications/Controls/app/Views/MainContainer/MainContainerView.tpl.html
@@ -7,19 +7,24 @@
 	<p>With the binding<p/>
 	<pre>
 
-	data-bind="bindings: {property: 'ViewModelProperty', target: 'ControlProperty'}"
-	data-bind="bindings: [{property: 'vmProp1', target: 'cProp1'}, {property: 'vmProp2', target: 'cProp2'}]"
+	data-bind="bindings: {ViewModelProperty:'ControlProperty'}"
+	data-bind="bindings: [{vmProp1:'cProp1'}, {vmProp2:'cProp2'}]"
+	data-bind="bindings: {ViewModelProperty:'ControlProperty', mode:'twoWay'}"
 	</pre>
 	<p>it is possible to bind directly from a property (Rx.Observable or knockout observable) on the view, to a getter/setter on a control.</p>
+	<p>If the property on the view model is "settable" (i.e. is a knockout observable or a Rx subject) two way bindings are also possible.</p>
 	<p>Example using a knockout observable for the x position and a Rx.Observable for the y property.</p>
 
 	<div style="position: relative; width: 400px; height: 100px; border: 1px solid black;">
 		<div 
 			data-control="Controls.ElementPositioner" 
-			data-bind="bindings: [{ property: 'vmX', target: 'x' }, { property: 'vmY', target: 'y' }]">
+			data-bind="bindings: [{vmX:'x'}, {vmY:'y'}]">
 			<div class="position_me">
-				<span>Position me!</span>
+				<span data-bind="text: name">Position me!</span>
 			</div>
 		</div>
 	</div>
+
+	<span style="font-size: 12px;">Positioned text:</span> 
+	<div style="display: inline;" data-control="Controls.SmartInput" data-bind="bindings: {name: 'text', mode:'twoWay'}"></div>
 </div>
