--- a/SampleApplications/DataGrid/app/Controls/DataGrid.less
+++ b/SampleApplications/DataGrid/app/Controls/DataGrid.less
@@ -118,13 +118,62 @@
 	}
 }
 
+[data-control="Controls.DataGrid"][data-grid-column-width="distributed"] {
+	
+	div.data_grid {
 
+		div.dg_body_container {
+
+			.dg_body {
+				position: static;
+				display: inline-block;
+				width: 100%;
+			}
+
+			.dg_rows {
+				width: 100%;
+				background-color: red;
+			}
+
+			.dg_row { 
+				width: 100%;
+			}
+
+			.dg_frozen {
+				position: absolute;
+				left: 0;
+				display: block;
+
+				.noMarginOrPadding();
+
+				&.dg_rows {
+					z-index: 200;
+				}
+			}
+		}
+
+		div.dg_header_container {
+
+			.dg_rows, {
+				position: relative;
+				display: inline-block;
+				width: 100%;
+			}
+
+			.dg_row { 
+				width: 100%;
+			}
+		}
+	}
+}
 
 [data-control="Controls.DataGrid"] {
 
 	@evenRowBgColor: #f5f5f5;
 	@oddRowBgColor: #ffffff;
 	@borderColor: #303030;
+	@rowHoverColor: #e1e1f6;
+
 	.cellPadding(@p: 10px) { padding: @p @p @p @p; }
 
 	div.data_grid {
@@ -136,6 +185,10 @@
 			&:nth-child(odd) {
 				background-color: @oddRowBgColor;
 			}
+
+			&.hover {
+				background-color: @rowHoverColor;
+			}
 		}
 
 		.dg_header .dg_row {
@@ -144,6 +197,7 @@
 
 		.dg_cell {
 			.cellPadding();
+			height: 31px;
 
 			div.dg_body_container & {
 				font-size: 12px;
