--- a/SampleApplications/DataGrid/app/styles/main.css
+++ b/SampleApplications/DataGrid/app/styles/main.css
@@ -89,17 +89,50 @@
   text-overflow: ellipsis;
   color: black;
 }
+[data-control="Controls.DataGrid"][data-grid-column-width="distributed"] div.data_grid div.dg_body_container .dg_body {
+  position: static;
+  display: inline-block;
+  width: 100%;
+}
+[data-control="Controls.DataGrid"][data-grid-column-width="distributed"] div.data_grid div.dg_body_container .dg_rows {
+  width: 100%;
+  background-color: red;
+}
+[data-control="Controls.DataGrid"][data-grid-column-width="distributed"] div.data_grid div.dg_body_container .dg_row {
+  width: 100%;
+}
+[data-control="Controls.DataGrid"][data-grid-column-width="distributed"] div.data_grid div.dg_body_container .dg_frozen {
+  position: absolute;
+  left: 0;
+  display: block;
+  color: black;
+}
+[data-control="Controls.DataGrid"][data-grid-column-width="distributed"] div.data_grid div.dg_body_container .dg_frozen.dg_rows {
+  z-index: 200;
+}
+[data-control="Controls.DataGrid"][data-grid-column-width="distributed"] div.data_grid div.dg_header_container .dg_rows {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+}
+[data-control="Controls.DataGrid"][data-grid-column-width="distributed"] div.data_grid div.dg_header_container .dg_row {
+  width: 100%;
+}
 [data-control="Controls.DataGrid"] div.data_grid .dg_row:nth-child(even) {
   background-color: #f5f5f5;
 }
 [data-control="Controls.DataGrid"] div.data_grid .dg_row:nth-child(odd) {
   background-color: #ffffff;
 }
+[data-control="Controls.DataGrid"] div.data_grid .dg_row.hover {
+  background-color: #e1e1f6;
+}
 [data-control="Controls.DataGrid"] div.data_grid .dg_header .dg_row {
   border-bottom: 2px solid #303030;
 }
 [data-control="Controls.DataGrid"] div.data_grid .dg_cell {
   padding: 10px 10px 10px 10px;
+  height: 31px;
 }
 div.dg_body_container [data-control="Controls.DataGrid"] div.data_grid .dg_cell {
   font-size: 12px;
