Lots of minor improvements before merging in to master.

--- a/SampleApplications/Controls/app/Views/MainContainer/MainContainerView.tpl.html
+++ b/SampleApplications/Controls/app/Views/MainContainer/MainContainerView.tpl.html
@@ -25,5 +25,7 @@
 	</div>
 
 	<span style="font-size: 12px;">Positioned text:</span> 
-	<div style="display: inline;" data-control="Controls.SmartInput" data-bind="bindings: {name: 'text', mode:'twoWay'}"></div>
+	<div style="display: inline;" 
+		data-control="Controls.SmartInput" 
+		data-bind="bindings: {name: 'text', mode:'twoWay'}"></div>
 </div>
