--- a/SampleApplications/NestedViews/app/Views/MainContainer/MainContainerView.tpl.html
+++ b/SampleApplications/NestedViews/app/Views/MainContainer/MainContainerView.tpl.html
@@ -8,7 +8,7 @@
 	<div data-view="Views.Nested.NestedView"></div>
 
 	<h4>Create views with knockout foreach</h4>
-	<p>Use the orangeView binding to create views in knockout loops.</p>
+	<p>Use the orangeView binding to create views that depend on knockout bindings.</p>
 	<!-- ko foreach: nestedWithExternalViewModelItems -->
 	<div data-bind="orangeView: 'Views.NestedWithExternalViewModel.NestedWithExternalViewModelView'"></div>
 	<!-- /ko -->
@@ -21,11 +21,24 @@
 		<!-- /ko -->
 	</div>
 
-	<h4>A view inside a view... </h4>
-	
-	<div class="view_container" style="position: relative; border-radius: 2px;border-color: #dedede;border-style: solid;border-width: 1px;">
-		
+	<p>Orange adds a knockout binding called "bindings" that can be used to bind to properties on views.</p>
+	<p>In this example this feature is used to bind a view model located on a "parent" view model to a "child" view.</p>
+	<div style="margin: 0px 5px; background-color: white; box-sizing: border-box;">
+		<div 
+			data-bind="bindings: {nestedWithExternalViewModel: 'dataContext'}"
+			data-view="Views.NestedWithExternalViewModel.NestedWithExternalViewModelView" style="display: inline-block;"></div>
 	</div>
+
+	<p>Here the "bindings" binding is used to rebind the datacontext of a view via a knockout observable.</p>
+	<div style="margin: 0px 5px; background-color: white; box-sizing: border-box;">
+		<div 
+			data-bind="bindings: {nestedWithExternalViewModelObservable: 'dataContext'}"
+			data-view="Views.NestedWithExternalViewModel.NestedWithExternalViewModelView" style="display: inline-block;"></div>
+	</div>
+
+
+	<h4>A view inside a view... </h4>
 	<p>A stupid example, but it works. Everything is created dynamicaly and disposed of on deletion. </p>
+	<div class="view_container" style="position: relative; border-radius: 2px;border-color: #dedede;border-style: solid;border-width: 1px;"></div>
 
 </div>
